# bme280-logger

./: .gitignore  README.md  calibration_cache.json  config.ini.sample  init-rpi.sh  init.sh  mac.py  main-ftdi.py  main-i2c.py  main.py  pyproject.toml  run.sh
